--- a/portfolio/templates/_navbar.html
+++ b/portfolio/templates/_navbar.html
@@ -17,10 +17,10 @@
       <a class="nav-link" href="{% url 'home' %}">{% trans "Home" %} <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item py-md-4 px-md-1">
-      <a class="nav-link" href="">{% trans "Blog" %}</a>
+      <a class="nav-link smooth-scroll" href="#project-1">{% trans "Projects" %}</a>
     </li>
     <li class="nav-item py-md-4 px-md-1">
-      <a class="nav-link smooth-scroll" href="#project-1">{% trans "Projects" %}</a>
+      <a class="nav-link smooth-scroll" href="#articles">{% trans "Articles" %}</a>
     </li>
     <li class="nav-item py-md-4 px-md-1">
       <a class="nav-link" href="">{% trans "CV" %}</a>
