--- a/portfolio/templates/sitepages/index.html
+++ b/portfolio/templates/sitepages/index.html
@@ -4,8 +4,8 @@
 
   <section id="header" class="header first-section">
     <h1 class="large-text">{% trans "Hi, I'm Zilong, a full-stack web developer." %}</h1>
-    <p class="medium-text">{% trans "I build, deploy, & maintain production-ready full-stack web applications." %}</p>
-    <p class="medium-text">{% trans "I am a fast-learner, hard-worker, & creative problem-solver." %}</p>
+    <p class="medium-text">{% trans "I build, deploy, and optimise scalable full-stack web applications." %}</p>
+    <p class="medium-text">{% trans "I LOVE Python, Javascript, and Game of Thrones!" %} 🐺</p>
     <p class="medium-text">{% trans "Say hello" %}: <a class="email-link" href="mailto:hi@zilongli.com">hi@zilongli.com</a></p>
     <div class="scroll-down-div">
       <a class="scroll-down smooth-scroll" href="#project-1">
@@ -70,36 +70,41 @@
   <section id="project-2" class="projects middle-section">
     <div class="row">
       <div class="col-md-5 description">
-
+        <h2 class="project-title">React Flashcard App</h2>
+        <p class="project-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="col-md-7 visual">
-
+        <a href="https://www.lingodream.com/" target="_blank"><img src="{% static 'images/projects/lingodream_screenshot.png' %}" alt=""></a>
       </div>
     </div>
   </section>
 
-  <section id="project-3" class="projects middle-section">
+  <section id="articles" class="articles middle-section">
     <div class="row">
-      <div class="col-md-5 description">
+      <div class="col-md-2 "></div>
+      <div class="col-md-8 article-sec-div">
+        <h2 class="articles-sec-title">Featured Articles</h2>
 
-      </div>
-      <div class="col-md-7 visual">
-
+        <div class="article-list">
+          <h5><a href="#">Django-Compressor+Whilenoise+AWS Cloudfront - The Ultimate Guide</a></h5>
+          <h5><a href="#">Some Other Article Something Random Useful</a></h5>
+          <h5><a href="#">Some Other Article Something Random Useful</a></h5>
+          <h5><a href="#">Some Other Article Something Random Useful</a></h5>
+        </div>
       </div>
     </div>
-  </section>
-
-  <section id="featured-posts" class="featured-posts middle-section">
-
   </section>
 
   <section id="about-me" class="about-me last-section">
     <div class="row">
       <div class="col-md-6 description">
 
+        <div class="social-outlets">
+
+        </div>
       </div>
       <div class="col-md-6 visual">
-        <img src="{% static 'images/me/2016_photo.jpg' %}" alt="">
+        
       </div>
     </div>
   </section>
