--- a/portfolio/templates/_footer.html
+++ b/portfolio/templates/_footer.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="footer-div">
-  <div class="container">
+  <div class="container footer-container">
     <!-- footer links -->
     <div class="row">
       <div class="col-md-5 copyright">
@@ -9,8 +9,8 @@
       </div>
       <div class="col-md-7 footer-links">
         <div class="float-right">
-          <a href="" class="bottom-link">{% trans "Blog" %}</a>
           <a href="#project-1" class="bottom-link smooth-scroll">{% trans "Projects" %}</a>
+          <a href="#articles" class="bottom-link smooth-scroll">{% trans "Articles" %}</a>
           <a href="" class="bottom-link">{% trans "CV" %}</a>
           <a href="" class="scroll-to-top">{% trans "Back to Top" %}</a>
         </div>
