--- a/portfolio/templates/_footer.html
+++ b/portfolio/templates/_footer.html
@@ -9,8 +9,7 @@
       </div>
       <div class="col-md-7 footer-links">
         <div class="float-right">
-          <a href="#project-1" class="bottom-link smooth-scroll">{% trans "Projects" %}</a>
-          <a href="#articles" class="bottom-link smooth-scroll">{% trans "Articles" %}</a>
+          <a href="mailto:hi@zilongli.com" class="bottom-link email">hi@zilongli.com</a>
           <a href="" class="bottom-link">{% trans "CV" %}</a>
           <a href="" class="scroll-to-top">{% trans "Back to Top" %}</a>
         </div>
