--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -41,8 +41,8 @@
     <!-- Latest compiled and minified Bootstrap 4.1.3 CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!-- Third-party CSS libraries go here -->
-
+    <!-- fontawesome 5.3.1 -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- project-specific CSS -->
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
 
