--- a/portfolio/templates/_navbar.html
+++ b/portfolio/templates/_navbar.html
@@ -2,25 +2,27 @@
 
 <nav id="navbar" class="navbar navbar-expand-md navbar-light bg-white py-md-4">
 <div class="container">
-<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-</button>
-<div class="brand-section">
-  <a class="navbar-brand" href="{% url 'home' %}">Zilong Li</a>
-  <p class="brand-subtitle">{% trans "Full-Stack Developer" %}</p>
-</div>
-
+  <div class="brand-section">
+    <a class="navbar-brand" href="{% url 'home' %}">Zilong Li</a>
+    <p class="brand-subtitle">{% trans "Full-Stack Developer" %}</p>
+  </div>
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ml-auto">
     <li class="nav-item py-md-4 px-md-1 active">
-      <a class="nav-link" href="{% url 'home' %}">{% trans "Home" %} <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="/">{% trans "Home" %} <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item py-md-4 px-md-1">
       <a class="nav-link smooth-scroll" href="#project-1">{% trans "Projects" %}</a>
     </li>
     <li class="nav-item py-md-4 px-md-1">
       <a class="nav-link smooth-scroll" href="#articles">{% trans "Articles" %}</a>
+    </li>
+    <li class="nav-item py-md-4 px-md-1">
+      <a class="nav-link smooth-scroll" href="#about-me">{% trans "About" %}</a>
     </li>
     <li class="nav-item py-md-4 px-md-1">
       <a class="nav-link" href="">{% trans "CV" %}</a>
